# iytdl

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  install.sh  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: github-release.yaml  pypi-publish.yaml  python-publish.yml  python-release.yaml
example/: iytdl_example  iytdl_example.py
iytdl/: __init__.py  downloader.py  exceptions.py  extractors.py  formatter.py  main.py  uploader.py  utils.py
iytdl/types/: __init__.py
scripts/: install.sh  vs_code.py
src/iytdl/: __init__.py  constants.py  downloader.py  exceptions.py  extractors.py  formatter.py  main.py  processes.py  sql_cache.py  uploader.py  utils.py
src/iytdl/types/: __init__.py  external_downloader.py  results.py
src/iytdl/upload_lib/: ext.py  functions.py  progress.py  uploader.py
tests/: test_download.py  test_download_upload.py  test_iytdl.py  test_search.py  test_upload.py
